--- a/3-Veri yapıları/1-.html
+++ b/3-Veri yapıları/1-.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eligendi similique atque culpa, ab voluptatem iure expedita, temporibus dolore optio laudantium. Quod, beatae sequi nihil vero necessitatibus perferendis praesentium laudantium!</strong>
+    <br>
+    <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi consectetur repellat ipsam, voluptates harum aliquid libero et cum nesciunt saepe debitis atque delectus recusandae neque aliquam corporis. Laboriosam, exercitationem nam!</b>
+    <u>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas voluptatibus minus eligendi ratione, modi rem placeat quae fuga illo incidunt molestiae sequi, animi perspiciatis? Soluta ipsa ex error veritatis qui.</u>
     
     <script src="./1-dates & times.js"></script>
 </body>
