--- a/5-Koşul İfadeleri/1-.html
+++ b/5-Koşul İfadeleri/1-.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./1-Dizi-Dizi&Metotları.js"></script>
+    <script src="./1-if-else.js"></script>
 </body>
 </html>
