--- a/6-Döngüler/1-.html
+++ b/6-Döngüler/1-.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
-    <script src="./5-uygulama.js"></script>
+    <script src="./1-Donguler.js"></script>
 </body>
 </html>
