--- a/8-Dom(Document-Object-Model)/2-.html
+++ b/8-Dom(Document-Object-Model)/2-.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Bootsrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>     
-    <!--Font awesome-->
-    <script src="https://kit.fontawesome.com/e1dfd60696.js" crossorigin="anonymous"></script>
+        <!-- Bootsrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>     
+        <!--Font awesome-->
+        <script src="https://kit.fontawesome.com/e1dfd60696.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1>New tasks</h1>
+                <h1 id="header" class="app-title">New tasks</h1>
             </div>
             <div class="card-body">
                 <div class="input-group">
@@ -25,39 +25,39 @@
             </div>
         </div>
 
-        <div class="alert alert-danger alert dismissible fade show" role="alert">
+        <div class="alert alert-danger alert dismissible fade show" role="alert" id="deneme">
             <div class="container-fluid mb-4">
                 <span class="fs-3"> Task List</span>
                 <button type="button" class="bg-danger float-end" data-bs-dismiss="alert">Delete all</button>
             </div>
             <div class="alert alert-warning alert-dismissible fade show" role="alert"> 
-                To Do İtem
+                To Do İtem 1
                 <button type="button" class="btn-close"  data-bs-dismiss="alert">
                 </button>
             </div>
             <div class="alert alert-warning alert-dismissible fade show" role="alert"> 
-                To Do İtem
+                To Do İtem 2
                 <button type="button" class="btn-close"  data-bs-dismiss="alert">
                 </button>
             </div>
             <div class="alert alert-warning alert-dismissible fade show" role="alert"> 
-                To Do İtem
+                To Do İtem 3
                 <button type="button" class="btn-close"  data-bs-dismiss="alert">
                 </button>
             </div>
             <div class="alert alert-warning alert-dismissible fade show" role="alert"> 
-                To Do İtem
+                To Do İtem 4
                 <button type="button" class="btn-close"  data-bs-dismiss="alert">
                 </button>
             </div>
             <div class="alert alert-warning alert-dismissible fade show" role="alert"> 
-                To Do İtem
+                To Do İtem 5
                 <button type="button" class="btn-close"  data-bs-dismiss="alert">
                 </button>
             </div>
         </div>
     </div>
 
-    <script src="./1-Dom.js"></script>
+    <script src="./2-Tekil-element-seçimi.js"></script>
 </body>
 </html>
