--- a/11-Proje-3-Form-Validator/index.html
+++ b/11-Proje-3-Form-Validator/index.html
@@ -9,9 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>     
     <!--Font awesome-->
-    <script src="https://kit.fontawesome.com/e1dfd60696.js" crossorigin="anonymous"></script>
-    <!--CSS -->
-    <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/e1dfd60696.js" crossorigin="anonymous"></script>s
 </head>
 <body>
     <div class="container d-flex justify-content-center my-5">
