--- a/9.1-Javascript-OOP/1-.html
+++ b/9.1-Javascript-OOP/1-.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button class="btn-start">Start Quiz</button>
+
+
     <script src="./1-OOP nedir-Constructor.js"></script>
 </body>
 </html>
